<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/app_icon_imageview"
        android:layout_width="@dimen/appInfoIconSize"
        android:layout_height="@dimen/appInfoIconSize"
        android:contentDescription="@string/app_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/app_name_textview"
        style="@style/TitleText"
        android:layout_marginTop="@dimen/distanceLarge"
        android:paddingHorizontal="@dimen/contentHorizontalPadding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_icon_imageview"
        tools:text="Cool App" />

    <TextView
        android:id="@+id/app_version_textview"
        style="@style/RegularText"
        android:layout_marginTop="@dimen/distanceVeryLarge"
        android:paddingHorizontal="@dimen/contentHorizontalPadding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_name_textview"
        tools:text="Версия: 0.11.124" />

    <TextView
        android:id="@+id/app_package_name_textview"
        style="@style/RegularText"
        android:layout_marginTop="@dimen/distanceMedium"
        android:paddingHorizontal="@dimen/contentHorizontalPadding"
        android:text="@string/package_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_version_textview"
        tools:text="Имя пакета:" />

    <TextView
        android:id="@+id/app_package_name_value_textview"
        style="@style/RegularText"
        android:paddingHorizontal="@dimen/contentHorizontalPadding"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_package_name_textview"
        tools:text="com.cool_company.cool_app" />

    <TextView
        android:id="@+id/app_apk_checksum_textview"
        style="@style/RegularText"
        android:layout_marginTop="@dimen/distanceMedium"
        android:paddingHorizontal="@dimen/contentHorizontalPadding"
        android:text="@string/apk_checksum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_package_name_value_textview"
        tools:text="Контрольная сумма apk-файла (CRC32):" />

    <TextView
        android:id="@+id/app_apk_checksum_value_textview"
        style="@style/RegularText"
        android:paddingHorizontal="@dimen/contentHorizontalPadding"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_apk_checksum_textview"
        tools:text="CBF43926" />

    <Button
        android:id="@+id/open_app_button"
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="@dimen/buttonHeight"
        android:layout_margin="@dimen/distanceMedium"
        android:text="@string/open_app"
        android:textSize="@dimen/textSizeRegularText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_apk_checksum_textview"
        app:layout_constraintVertical_bias="0.95" />

    <View
        android:id="@+id/progress_cover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:visibility="gone"
        android:background="?attr/backgroundColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/error_textview"
        style="@style/RegularText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?attr/backgroundColor"
        android:gravity="center"
        android:text="@string/error_getting_app_data"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>